k8s/celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  labels:
    name: celery-worker
    py-context: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      name: celery-worker
  template:
    metadata:
      labels:
        name: celery-worker
    spec:
      containers:
        - name: asu-celery-worker
          image: docker.io/library/asu-python:latest
          args: [ "celery", "-A", "asu", "worker", "-l", "info" ]
          imagePullPolicy: Never
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
  labels:
    name: celery-beat
    py-context: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      name: celery-beat
  template:
    metadata:
      labels:
        name: celery-beat
    spec:
      containers:
        - name: asu-celery-beat
          image: docker.io/library/asu-python:latest
          args: [ "celery", "-A", "asu", "beat", "-l", "info" ]
          imagePullPolicy: Never
