k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: asu-rabbitmq
          image: rabbitmq:3.11-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672
          volumeMounts:
            - mountPath: /var/lib/rabbitmq/mnesia
              name: rabbitmq-vol
      volumes:
        - name: rabbitmq-vol
          persistentVolumeClaim:
            claimName: rabbitmq-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
